# ChapterTrimmer

./: README.md  main.py  pyproject.toml
src/: Chapter Trimmer.spec  ChapterTrimmer.spec  app.py
src/chaptertrimmer/: __init__.py  main.py
