[project]
name = "Chapter Trimmer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "oddgai" }
]
dependencies = [
    "flet>=0.21.1",
    "scenedetect[opencv]>=0.6.3",
    "pyinstaller>=6.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["./"]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120
